tests/regression/errors/basic/undefined_var_21.csd
// Undefined variable test 21
vibez.spill("Using undefined:", undefined_var_21)
sus result drip = missing_variable + 21
